[package]
name = "my_gl"
version = "0.0.1"
edition = "2021"
authors = ["Di Saber"]
repository = "https://github.com/DiSaber/my_gl"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.54.0"
image = "0.24.7"
nalgebra = "0.32.3"
palette = "0.7.3"
rusttype = "0.9.3"
tobj = "4.0.0"
